--- a/extensions/imessage/package.json
+++ b/extensions/imessage/package.json
@@ -10,12 +10,14 @@
     {
       "name": "send-message",
       "title": "Send Message",
+      "subtitle": "iMessage",
       "description": "Send a message",
       "mode": "view"
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.30.1"
+    "@raycast/api": "^1.30.1",
+    "run-applescript": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
